--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Duvan's Portfolio</title>
+
 </head>
 <body>
+
+    <header>
+
+        <h1>
+
+        <a href="/"></a>Duvan Ayala Stonic</a>
     
+         </h1>
+
+         <nav>
+
+            <ul>
+
+                <li>
+                    <a href="#about-me">About me</a>
+                </li>
+
+                <li>
+                    <a href="#Work">Work</a>
+                </li>
+
+                <li>
+                    <a href="#Contact-me">Contact Me</a>
+                </li>
+
+                <li>
+                    <a href="#Resume">Resume</a>
+                </li>
+
+
+            </ul>
+
+         </nav>
+
+    </header>
+
+    <section class="jumbotron"></section>
+       
 </body>
-</html>ml
+</html>
