About, Work, contact sections

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </li>
 
                 <li>
-                    <a href="#Work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
 
                 <li>
-                    <a href="#Contact-me">Contact Me</a>
+                    <a href="#contact">Contact Me</a>
                 </li>
 
                 <li>
@@ -43,9 +43,118 @@
 
          </nav>
 
+         <!-- About Me section-->
+
     </header>
 
     <section class="jumbotron"></section>
+
+    <section class="container">
+
+       <h2><inline>1-</inline> About Me</h2>
+
+       <section id="about-me" class="about-me">
+
+       <div class="aboutme">
+       <div id="me_img">
+           <img src="./assets/images/aboutme.jpg" alt="Me wearing clothes for cold weather">
+       </div>
+       <p>Hi, My name is Duvan Ayala Stonic. I am currently living in Orlando, FL. 
+        I am 19 years old. 
+        Coding life!... I have had a deep passion and curiosity for
+        Coding as programming, computers, technology since I was little. Years ago I starter creating, coding and styling
+        some games from scratch, using an app named GameMaker, and I used to use languages such as C++
+        and GML (GameMakerLanguage), years later I starter to work for Google Adsense, and
+        my job was building up webpages from wordpress and add some ads.
+        My love for coding and learning more about this field is something I defenitly want to improve
+        I hope to be able to learn and become a full stack web developer as time goes by</p>
+       </div>
+       </section>
+    </section>
        
+    <!-- Portfolio Section-->
+
+    <section id="work" class="showcase">
+
+        <div class="container">
+
+        <h2><span>2-</span> Work</h2>
+
+            <div class="img-container">
+
+                <div class="work">
+                    <a href="https://ayalastonic.github.io/Run-Buddy/"><img src="./assets/images/ayala-runbuddy.png" alt="Run Buddy website by Ayala Stonic" /></a>
+                    <div class="text">
+                        <h3>Run Buddy</h3>
+                        <p>(HTML, CSS)</p>
+                    </div>
+                </div>
+
+                <div class="work">
+                    <a href="" target="_blank"><img src="./assets/images/graywood.jpg" alt="Working on it" /></a>
+                    <div class="text">
+                        <h3>In process</h3>
+                        <p>....</p>
+                    </div>
+                </div>
+
+                <div class="work">
+                    <a href=""><img src="./assets/images/purplewood.jpg" alt="Working on it" /></a>
+                    <div class="text">
+                        <h3>In process</h3>
+                        <p>....</p>
+                    </div>
+                </div>
+
+                <div class="work">
+                    <a href="" ><img src="./assets/images/jumbotron.jpg" alt="Working on it" /></a>
+                    <div class="text">
+                        <h3>In Progress</h3>
+                        <p>....</p>
+                    </div>
+                </div>
+
+                <div class="work">
+                    <a href=""><img src="./assets/images/redwood.jpg" alt="Working on it" /></a>
+                    <div class="text">
+                        <h3>In progress</h3>
+                        <p>...</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- contact section -->
+
+     <section id="contact" class="contact-me">
+ 
+         <div class="container">
+ 
+         <h2><span>3-</span> Contact Me</h2>
+     
+         <div class="contactme">
+         <p><img src="" alt="Phone" /> <a href="Tel">321-512-2643</a></p>
+         <p><img src="" alt="E-mail" /> <a href="Ayaladuvan876@gmail.com">Ayaladuvan876@gmail.com</a></p>
+         <p><img src="" alt="GitHub" /> <a href="https://github.com/AyalaStonic">GitHub</a></p>
+         </div>
+         </div>
+ 
+     </section>
+ 
+     <!--footer -->
+ 
+     <footer>
+ 
+        <p>By Duvan Ayala Stonic</p>
+
+    </footer>
+
+
+   
+
 </body>
 </html>
