--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
 
     <section class="container">
 
-       <h2><inline>1-</inline> About Me</h2>
-
        <section id="about-me" class="about-me">
 
-       <div class="aboutme">
+       <article class="aboutme">
+
+        <h2><inline>1-</inline> About Me</h2>
        <div id="me_img">
            <img src="./assets/images/aboutme.jpg" alt="Me wearing clothes for cold weather">
        </div>
        <p>Hi, My name is Duvan Ayala Stonic. I am currently living in Orlando, FL. 
         I am 19 years old. 
         Coding life!... I have had a deep passion and curiosity for
-        Coding as programming, computers, technology since I was little. Years ago I starter creating, coding and styling
+        Coding and programming, also about computers, technology since I was little. Years ago I starter creating, coding and styling
         some games from scratch, using an app named GameMaker, and I used to use languages such as C++
         and GML (GameMakerLanguage), years later I starter to work for Google Adsense, and
         my job was building up webpages from wordpress and add some ads.
         My love for coding and learning more about this field is something I defenitly want to improve
         I hope to be able to learn and become a full stack web developer as time goes by</p>
-       </div>
+       </article>
        </section>
     </section>
        
@@ -82,7 +82,7 @@
 
             <div class="img-container">
 
-                <div class="work">
+                <div class="firstwork">
                     <a href="https://ayalastonic.github.io/Run-Buddy/"><img src="./assets/images/ayala-runbuddy.png" alt="Run Buddy website by Ayala Stonic" /></a>
                     <div class="text">
                         <h3>Run Buddy</h3>
@@ -137,9 +137,9 @@
          <h2><span>3-</span> Contact Me</h2>
      
          <div class="contactme">
-         <p><img src="" alt="Phone" /> <a href="Tel">321-512-2643</a></p>
-         <p><img src="" alt="E-mail" /> <a href="Ayaladuvan876@gmail.com">Ayaladuvan876@gmail.com</a></p>
-         <p><img src="" alt="GitHub" /> <a href="https://github.com/AyalaStonic">GitHub</a></p>
+         <p><a href="Tel">321-512-2643</a></p>
+         <p><a href="Ayaladuvan876@gmail.com">Ayaladuvan876@gmail.com</a></p>
+         <p><a href="https://github.com/AyalaStonic">GitHub</a></p>
          </div>
          </div>
  
