updating for projet 2

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="work">
-                    <a href="" target="_blank"><img src="./assets/images/graywood.jpg" alt="Working on it" /></a>
+                    <a href="https://github.com/xoerycaxo/The-Story-Keeper" target="_blank"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
                     <div class="text">
                         <h3>In process</h3>
                         <p>....</p>
