--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="work">
-                    <a href="https://github.com/xoerycaxo/The-Story-Keeper" target="_blank"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
+                    <a href="https://github.com/xoerycaxo/The-Story-Keeper"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
                     <div class="text">
                         <h3>In process</h3>
                         <p>....</p>
@@ -101,9 +101,10 @@
                 <div class="work">
                     <a href=""><img src="./assets/images/purplewood.jpg" alt="Working on it" /></a>
                     <div class="text">
-                        <h3>In process</h3>
-                        <p>....</p>
-                    </div>
+                        <h3>Story The-Story-Keeper 
+                            (project 2)
+                        </h3>
+                                            </div>
                 </div>
 
                 <div class="work">
