Final touches project 2

--- a/index.html
+++ b/index.html
@@ -93,18 +93,19 @@
                 <div class="work">
                     <a href="https://github.com/xoerycaxo/The-Story-Keeper"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
                     <div class="text">
-                        <h3>In process</h3>
-                        <p>....</p>
+                        <h3>The-Story-Keeper</h3>
+                        <p>JavaScript, Node.JS, Html,
+                             Css, MySql, JQuery,
+                             DataBase</p>
                     </div>
                 </div>
 
                 <div class="work">
                     <a href=""><img src="./assets/images/purplewood.jpg" alt="Working on it" /></a>
                     <div class="text">
-                        <h3>Story The-Story-Keeper 
-                            (project 2)
-                        </h3>
-                                            </div>
+                        <h3>In process</h3>
+                        <p>....</p>
+                    </div>
                 </div>
 
                 <div class="work">
