project 1 and 2 updated

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                 </div>
 
                 <div class="work">
-                    <a href=""><img src="./assets/images/purplewood.jpg" alt="Working on it" /></a>
+                    <a href="https://xunvyre.github.io/project-sleepSpace/"><img src="./assets/images/screenshot.jpeg"></a>
                     <div class="text">
-                        <h3>In process</h3>
-                        <p>....</p>
+                        <h3>SleepSpace</h3>
+                        <p>Html, Css, Javascript, API's </p>
                     </div>
                 </div>
 
