--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="work">
-                    <a href="https://github.com/xoerycaxo/The-Story-Keeper"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
+                    <a href="https://storykeeper-book-app.herokuapp.com/"><img src="./assets/images/190875552-ce4056ec-3532-41e0-946a-2725f93aaf53.png" alt="Project 2" /></a>
                     <div class="text">
                         <h3>The-Story-Keeper</h3>
                         <p>JavaScript, Node.JS, Html,
